fix overflow

--- a/steedos/client/views/layouts/master.less
+++ b/steedos/client/views/layouts/master.less
@@ -57,6 +57,8 @@
             border-bottom: 1px solid #d2d6de;
             background-color: #ecf0f5;
             .navigation-title {
+                height: 40px;
+                overflow: hidden;
                 text-align: center;
                 position: absolute;
                 left: 80px;
